--- a/ShopmeWebParent/ShopmeBackend/src/main/resources/application.properties
+++ b/ShopmeWebParent/ShopmeBackend/src/main/resources/application.properties
@@ -6,7 +6,9 @@ spring.datasource.username=root
 spring.datasource.password=vishal#24
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.open-in-view=false
+
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
